[package]
name = "shyaml"
description = "Command line tool for manipulating markup languages like YAML"
version = "0.4.1"
authors = ["Clint Byrum <clint@fewbar.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ToolsForHumans/shyaml.git"

[dependencies]
clap = "~2"
serde_json = "~1"
serde_yaml = "~0.8"
serde = "~1"
serde_derive = "~1"
tempdir = "~0"
